fixed menu overflow-X-direction

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
   display: grid;
   place-content: center;
   font-family: "Inter", sans-serif;
+  overflow-x: hidden;
 }
 
 #logo {
@@ -63,7 +64,7 @@ header {
   border-left: 142px solid #3b3b3b82;
   background-clip: padding-box;
   width: 100%;
-  height: 210vh;
+  height: 230vh;
   transform: translate(100%, 0);
   transition: transform 1s linear;
 }
